Refine about page layout
- add images, fix layout design

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 * {
+  scroll-behavior: smooth;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
@@ -198,7 +199,7 @@ a {
   position: absolute;
   top: -10%;
   left: -10%;
-  width: 15%;
+  width: 20%;
   height: 120%;
   -webkit-transform: rotate(6deg);
           transform: rotate(6deg);
@@ -209,7 +210,7 @@ a {
   position: absolute;
   top: -10%;
   left: 90%;
-  width: 15%;
+  width: 20%;
   height: 120%;
   -webkit-transform: rotate(-6deg);
           transform: rotate(-6deg);
@@ -759,6 +760,10 @@ a {
   padding: 0 5rem;
 }
 
+.about-info-container .main-subheading {
+  line-height: 3 !important;
+}
+
 .about-info-container-two {
   padding: 0 5rem;
   display: -ms-grid;
@@ -767,10 +772,30 @@ a {
       grid-template-columns: repeat(2, 1fr);
 }
 
+.about-info-container-two .about-image-two {
+  background-image: url(../assets/about-image-one.jpg);
+  height: 600px;
+  background-position: left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.about-info-container-two .about-image-four {
+  height: 600px;
+  background-image: url(https://images.pexels.com/photos/3290047/pexels-photo-3290047.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-position: left;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
 .about-info-container-two .about-info {
   position: relative;
   z-index: 1;
   padding: 0 5rem;
+}
+
+.about-info-container-two .main-subheading {
+  line-height: 3 !important;
 }
 
 .gallery-container {
