--- a/css/main.scss
+++ b/css/main.scss
@@ -431,12 +431,16 @@ a {
     @include grid-layout; 
     grid-template-columns: repeat(2, 1fr);
     padding: 0 5rem; 
-    grid-gap: 2rem; 
+    grid-gap: 0rem; 
     transform: skewY(-5deg);
 
-    .featured-video-info-one, .featured-video-info-two {
-        padding: 1rem 2rem;
+    .featured-video-info-one {
+        padding: 0.5rem 5rem 2rem 5rem;
         align-self: flex-start;
+    }
+
+    .featured-video-info-two {
+        padding: 1rem 5rem 2rem 5rem;
     }
 
     .featured-video-info-two {
