--- a/css/main.css
+++ b/css/main.css
@@ -842,6 +842,58 @@ a {
   }
 }
 
+/* our work page */
+.work-header {
+  position: relative;
+  background-image: url(https://images.pexels.com/photos/163550/landscape-scenic-going-to-the-sun-road-rocky-mountains-163550.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 70vh;
+}
+
+.work-header::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.work-container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 5rem;
+}
+
+.work-container .page-heading, .work-container .main-subheading-light, .work-container .main-button {
+  position: relative;
+  z-index: 2;
+}
+
+.our-works {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding: 8rem 5rem;
+}
+
+.our-works iframe {
+  width: 100%;
+}
+
 /* footer */
 footer {
   padding: 10rem 5rem 5rem 5rem;
