--- a/css/main.css
+++ b/css/main.css
@@ -583,6 +583,17 @@ a {
   width: 100%;
 }
 
+.work-button-container {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 /* contact page */
 .contact-header {
   position: relative;
@@ -892,6 +903,42 @@ a {
 
 .our-works iframe {
   width: 100%;
+}
+
+/* our shows */
+.show-header {
+  position: relative;
+  background-image: url(../assets/gallery/gallery-image-five.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 70vh;
+}
+
+.show-header::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.show-container {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 5rem;
+}
+
+.show-container .page-heading, .show-container .main-subheading-light, .show-container .main-button {
+  position: relative;
+  z-index: 2;
 }
 
 /* footer */
