--- a/css/main.scss
+++ b/css/main.scss
@@ -454,6 +454,9 @@ a {
         width: 100%; 
     }
 }
+.work-button-container {
+    @include grid-layout; 
+}
 /* contact page */ 
 .contact-header {
     position: relative;
@@ -712,6 +715,35 @@ a {
     iframe {
         width: 100%; 
     }
+}
+/* our shows */ 
+.show-header {
+    position: relative;
+    background-image: url(../assets/gallery/gallery-image-five.jpg);
+    background-size: cover; 
+    background-repeat: no-repeat;
+    width: 100%; 
+    height: 70vh;
+}
+.show-header::after {
+    content:''; 
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(0,0,0,0.75);
+}
+.show-container {
+    height: 100%; 
+    display: flex; 
+    align-items: center; 
+    padding: 0 5rem; 
+
+    .page-heading, .main-subheading-light, .main-button {
+        position: relative;
+        z-index: 2;         
+    }  
 }
 /* footer */ 
 footer {
