--- a/css/main.css
+++ b/css/main.css
@@ -955,25 +955,28 @@ a {
   padding: 8rem 5rem 0 5rem;
 }
 
-.show-one {
+.show-one, .show-two {
   padding: 4rem 5rem 5rem 5rem;
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
 }
 
-.show-one .main-subheading {
-  line-height: 2.6 !important;
+.show-one .main-subheading, .show-two .main-subheading {
+  line-height: 2.2 !important;
   padding-right: 1.3rem;
   position: relative;
   z-index: 5;
 }
 
-.show-one .walk-around-video {
+.show-one .walk-around-video, .show-two .walk-around-video {
   height: 400px !important;
 }
 
