--- a/css/main.scss
+++ b/css/main.scss
@@ -752,14 +752,15 @@ a {
     align-items: center;
     padding: 8rem 5rem 0 5rem;
 }
-.show-one {
+.show-one, .show-two {
     padding: 4rem 5rem 5rem 5rem; 
     display: grid; 
     justify-content: center;
+    align-items: center; 
     grid-template-columns: repeat(2, 1fr);
 
     .main-subheading {
-        line-height: 2.6 !important;
+        line-height: 2.2 !important;
         padding-right: 1.3rem;
         position: relative; 
         z-index: 5; 
