--- a/css/main.scss
+++ b/css/main.scss
@@ -922,7 +922,6 @@ footer {
             width: 100%;
             background-color: white;
             padding: 1.5rem;
-            margin-top: 2rem;
             position: absolute;
             left: 0;
             display: none; 
@@ -990,4 +989,78 @@ footer {
             padding-top: 4.5rem; 
         }
     }
+}
+@media screen and (max-width: 992px) {
+    .main-heading {
+        font-size: 4rem; 
+    }
+    .navbar {
+        padding: 1.4rem 3rem; 
+    }
+    .promo  {
+        padding: 0 3rem; 
+
+        h1 {
+            font-size: 5.5rem; 
+        }
+        p {
+            font-size: 2.5rem; 
+        }
+        .container {
+            display: grid;
+            grid-template-columns: 1fr; 
+        }
+        .main-button {
+            margin-bottom: 1rem; 
+        }
+        .secondary-button {
+            margin-left: 0; 
+            text-align: center; 
+        }
+    }
+
+    .about-section {
+
+        height: 70vh;
+
+        .about-background-one, .about-background-two {
+            display: none; 
+        }
+
+        .about-content {
+            width: 100% !important; 
+            transform: none !important; 
+
+            .about-content-inner {
+                transform: none !important; 
+                padding: 0 3rem !important; 
+            }
+        }
+    }
+
+    .shows-container-one {
+        padding: 5rem 3rem 1rem 3rem !important; 
+    }
+
+    .shows-container-two, .shows-container-three, .shows-container-four {
+        padding: 0 3rem !important;
+    }
+
+    .featured-work-title {
+        padding: 8rem 3rem 5rem 3rem !important;
+    }
+
+    .featured-work {
+        padding: 0 3rem !important;
+    }
+    
+    .footer-container {
+        grid-template-columns: 1fr; 
+
+        .footer-pages {
+            margin: 0;
+            padding-top: 4.5rem; 
+        }
+    }
+
 }
