add media queries for iphone5/se
add media queries for iphone5/se for the homepage.

--- a/css/main.css
+++ b/css/main.css
@@ -1216,7 +1216,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 600px) {
   .main-heading {
     font-size: 4rem;
   }
@@ -1228,6 +1228,7 @@ footer {
   }
   .promo h1 {
     font-size: 5.5rem;
+    margin-top: 3rem;
   }
   .promo p {
     font-size: 2.5rem;
@@ -1246,7 +1247,7 @@ footer {
     text-align: center;
   }
   .about-section {
-    height: 70vh;
+    height: 80vh;
   }
   .about-section .about-background-one, .about-section .about-background-two {
     display: none;
@@ -1280,6 +1281,57 @@ footer {
   .footer-container .footer-pages {
     margin: 0;
     padding-top: 4.5rem;
+  }
+  .footer-container .footer-contact-info span {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .main-heading {
+    font-size: 3.4rem;
+  }
+  .main-heading-small {
+    font-size: 3rem;
+  }
+  .main-subheading {
+    font-size: 1.1rem;
+  }
+  .navbar {
+    padding: 1.4rem 1.5rem;
+  }
+  .promo {
+    padding: 0 1.5rem;
+  }
+  .promo h1 {
+    font-size: 4.5rem;
+  }
+  .promo p {
+    font-size: 1.5rem;
+  }
+  .about-content {
+    margin-top: 5rem;
+  }
+  .about-content .about-content-inner {
+    padding: 0 1.5rem;
+  }
+  .about-content .about-content-inner .about-content-subtitle {
+    font-size: 1.1rem;
+  }
+  .shows-container-one {
+    padding: 8rem 3rem 1rem 3rem !important;
+  }
+  .shows-container-two, .shows-container-three, .shows-container-four {
+    padding: 0 1.5rem !important;
+  }
+  .featured-work-title {
+    padding: 8rem 1.5rem 5rem 1.5rem !important;
+  }
+  .featured-work {
+    padding: 0 1.5rem !important;
+  }
+  footer {
+    padding: 10rem 1.5rem 5rem 1.5rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
