add media query for about section

--- a/css/main.css
+++ b/css/main.css
@@ -1152,6 +1152,7 @@ footer {
     padding: 1.5rem;
     position: absolute;
     left: 0;
+    top: 99%;
     display: none;
   }
   .navbar-mobile .navbar-mobile-contain .nav-link {
@@ -1287,7 +1288,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .main-heading {
     font-size: 3.4rem;
   }
@@ -1332,6 +1333,12 @@ footer {
   }
   footer {
     padding: 10rem 1.5rem 5rem 1.5rem;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-height: 1024px) {
+  .about-section {
+    height: 70vh;
   }
 }
 /*# sourceMappingURL=main.css.map */
