add media queries for homepage (landscape mode)

--- a/css/main.css
+++ b/css/main.css
@@ -1325,6 +1325,9 @@ footer {
   .shows-container-two, .shows-container-three, .shows-container-four {
     padding: 0 1.5rem !important;
   }
+  .shows-container-three .skew-two {
+    width: 8.6%;
+  }
   .featured-work-title {
     padding: 8rem 1.5rem 5rem 1.5rem !important;
   }
@@ -1339,6 +1342,58 @@ footer {
 @media screen and (min-width: 768px) and (min-height: 1024px) {
   .about-section {
     height: 70vh;
+  }
+}
+
+@media screen and (max-width: 823px) and (max-height: 414px) and (orientation: landscape) {
+  .main-heading {
+    font-size: 3rem;
+  }
+  .main-subheading {
+    font-size: 1.1rem;
+  }
+  .main-heading-small {
+    font-size: 2.5rem;
+  }
+  .promo h1 {
+    margin-top: 2rem;
+    font-size: 4.2rem;
+  }
+  .promo p {
+    font-size: 1.4rem;
+  }
+  .about-section .about-content {
+    height: 110%;
+  }
+  .about-section .about-content .about-content-inner {
+    padding: 0 0 0 3rem !important;
+  }
+  .about-section .about-content .about-content-inner .about-content-subtitle {
+    font-size: 0.95rem !important;
+  }
+}
+
+@media screen and (max-width: 568px) and (max-height: 320px) and (orientation: landscape) {
+  .promo h1 {
+    font-size: 3rem;
+    letter-spacing: -0.2rem;
+    margin-top: 4rem;
+  }
+  .promo p {
+    font-size: 1rem;
+  }
+  .promo .container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .promo .container .main-button {
+    margin-bottom: 0;
+  }
+  .promo .container .secondary-button {
+    margin-left: 1rem;
+  }
+  .about-section .about-content .about-content-inner {
+    padding-top: 2.5rem !important;
   }
 }
 /*# sourceMappingURL=main.css.map */
