--- a/css/main.css
+++ b/css/main.css
@@ -1215,6 +1215,49 @@ footer {
     margin: 0;
     padding-top: 4.5rem;
   }
+  /* about page */
+  .about-info-container {
+    padding: 5rem 3rem;
+    height: 100%;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    grid-gap: 3rem;
+  }
+  .about-info-container .main-subheading {
+    line-height: 2 !important;
+  }
+  .about-info-container .about-info {
+    padding: 0 1rem;
+  }
+  .about-info-container .position-relative .img-fluid {
+    margin-top: 3.5rem;
+    width: 80%;
+  }
+  .about-info-container-two {
+    height: 100%;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+  .about-info-container-two .about-info {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+    padding: 0 5rem 0 0;
+    margin-bottom: 2rem;
+  }
+  .about-info-container-two .about-info .main-subheading {
+    line-height: 2 !important;
+  }
+  .about-info-container-two .about-image-four, .about-info-container-two .about-image-two {
+    width: 90% !important;
+  }
+  .about-info-three {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .about-info-three-image {
+    width: 80%;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -1286,6 +1329,24 @@ footer {
   .footer-container .footer-contact-info span {
     margin-left: 0;
   }
+  /* about page */
+  .about-container {
+    padding: 0 3rem;
+  }
+  .about-container .page-heading {
+    font-size: 4rem;
+  }
+  .about-info-container .about-info-three-image {
+    height: 300px !important;
+    background-position: center;
+  }
+  .about-info-container-two .about-info {
+    padding-right: 0 !important;
+  }
+  .about-info-container-two .about-image-two, .about-info-container-two .about-image-four {
+    height: 300px;
+    background-position: center;
+  }
 }
 
 @media screen and (max-width: 360px) {
@@ -1337,6 +1398,16 @@ footer {
   footer {
     padding: 10rem 1.5rem 5rem 1.5rem;
   }
+  /* about page */
+  .about-container {
+    padding: 0 1.5rem;
+  }
+  .about-container .page-heading {
+    font-size: 3.3rem !important;
+  }
+  .about-info-container, .about-info-container-two {
+    padding: 5rem 1rem 0 1rem;
+  }
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
@@ -1370,6 +1441,14 @@ footer {
   }
   .about-section .about-content .about-content-inner .about-content-subtitle {
     font-size: 0.95rem !important;
+  }
+  /* about page */
+  .about-header {
+    height: 100vh;
+  }
+  .about-header .page-heading {
+    font-size: 4rem;
+    margin-top: 2rem;
   }
 }
 
