--- a/css/main.scss
+++ b/css/main.scss
@@ -963,7 +963,6 @@ footer {
             width: 10%; 
         }
     }
-
     .featured-work-title {
         grid-template-columns: 1fr; 
     }
@@ -989,6 +988,56 @@ footer {
             margin: 0; 
             padding-top: 4.5rem; 
         }
+    }
+    /* about page */ 
+    .about-info-container {
+        padding: 5rem 3rem; 
+        height: 100%; 
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 3rem;
+
+        .main-subheading {
+            line-height: 2 !important; 
+        }
+
+        .about-info {
+            padding: 0 1rem; 
+        }
+
+        .position-relative {
+            .img-fluid {
+                margin-top: 3.5rem; 
+                width: 80%; 
+            }
+        }
+    }
+    .about-info-container-two {
+        height: 100%; 
+        grid-template-columns: repeat(1, 1fr);
+
+
+        .about-info {
+            order: -1; 
+            padding: 0 5rem 0 0; 
+            margin-bottom: 2rem; 
+
+            .main-subheading {
+                line-height: 2 !important; 
+            }
+        }
+        
+        .about-image-four, .about-image-two  {
+            width: 90% !important; 
+        }
+    }
+
+    .about-info-three {
+        width: 80%; 
+        margin: 0 auto; 
+    }
+
+    .about-info-three-image {
+        width: 80%; 
     }
 }
 @media screen and (max-width: 600px) {
@@ -1069,6 +1118,37 @@ footer {
         }
     }
 
+    /* about page */ 
+    .about-container {
+        padding: 0 3rem; 
+
+        .page-heading {
+            font-size: 4rem; 
+        }
+    }
+
+    .about-info-container {
+
+        .about-info-three-image {
+            height: 300px !important; 
+            background-position: center; 
+        }
+
+    }
+
+    .about-info-container-two {
+
+        .about-info {
+            padding-right: 0 !important; 
+        }
+
+        .about-image-two, .about-image-four {
+            height: 300px; 
+            background-position: center; 
+        }
+        
+    }
+
 }
 @media screen and (max-width: 360px) {
     .main-heading {
@@ -1126,6 +1206,19 @@ footer {
     footer {
         padding: 10rem 1.5rem 5rem 1.5rem;
     }
+    /* about page */ 
+    .about-container {
+        padding: 0 1.5rem;
+
+        .page-heading {
+            font-size: 3.3rem !important; 
+        }
+    }
+
+    .about-info-container, .about-info-container-two {
+        padding: 5rem 1rem 0 1rem; 
+    }
+
 }
 
 @media screen and (min-width: 768px) and (min-height: 1024px) {
@@ -1166,6 +1259,15 @@ footer {
                     font-size: 0.95rem !important; 
                 }
             }
+        }
+    }
+    /* about page */ 
+    .about-header {
+        height: 100vh; 
+
+        .page-heading {
+            font-size: 4rem; 
+            margin-top: 2rem;
         }
     }
 }
