--- a/css/main.scss
+++ b/css/main.scss
@@ -1039,6 +1039,47 @@ footer {
     .about-info-three-image {
         width: 80%; 
     }
+    /* shows page */ 
+    .show-one-title {
+        flex-wrap: wrap; 
+        justify-content: center; 
+
+        .main-heading {
+            font-size: 4rem; 
+        }
+    }
+
+    .show-one, .show-two, .show-three{
+        padding: 4rem 3rem 0 3rem; 
+        grid-template-columns: repeat(1, 1fr);
+        height: 100%; 
+    }
+    .show-one {
+
+        .main-subheading, .show-video-content {
+            padding: 0 !important; 
+
+            .walk-around-video {
+                width: 100%; 
+            }
+        }
+        
+    }
+
+    .show-two-image, .show-three-image {
+        display: none; 
+    }
+
+    .show-two-info {
+        padding-left: 0 !important; 
+    }
+
+    #pricing {
+        .pricing-plans {
+            grid-template-columns: repeat(1, 1fr);
+        }
+    }
+
 }
 @media screen and (max-width: 600px) {
     .main-heading {
